--- a/CraftConnect/backend/requirements.txt
+++ b/CraftConnect/backend/requirements.txt
@@ -1,18 +1,14 @@
 fastapi==0.104.1
-uvicorn==0.24.0
+uvicorn[standard]==0.24.0
 pydantic==2.5.0
 pydantic-settings==2.1.0
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+bcrypt==4.1.1
 python-multipart==0.0.6
-aiofiles==23.2.1
-bcrypt==4.1.2
-PyJWT==2.8.0
-Pillow==10.1.0
-transformers==4.36.0
+pillow==10.1.0
+
+# AI Libraries (comment out to speed up deployment)
 torch==2.1.0
-torchvision==0.16.0
-requests==2.31.0
-tenacity==8.2.3
-python-dotenv==1.0.0
-openai==1.3.0
-faiss-cpu==1.7.4
-numpy==1.24.3
+transformers==4.35.0
+huggingface-hub==0.19.0
